--- a/RNAseq_Analysis.ipynb
+++ b/RNAseq_Analysis.ipynb
@@ -9,24 +9,42 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a3647215-b509-4ef3-bed5-08f84fb051b4",
-   "metadata": {},
-   "source": [
-    "if (!requireNamespace(\"BiocManager\", quietly = TRUE))\n",
-    "    install.packages(\"BiocManager\")\n",
-    "\n",
-    "BiocManager::install(\"DESeq2\")"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "10e43052-5fa1-4179-a83f-30c24495c251",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'getOption(\"repos\")' replaces Bioconductor standard repositories, see\n",
+      "'?repositories' for details\n",
+      "\n",
+      "replacement repositories:\n",
+      "    CRAN: https://cran.r-project.org\n",
+      "\n",
+      "\n",
+      "Bioconductor version 3.12 (BiocManager 1.30.16), R 4.0.1 (2020-06-06)\n",
+      "\n",
+      "Installing package(s) 'BiocVersion', 'DESeq2', 'RColorBrewer', 'ggrepel',\n",
+      "  'scales', 'genefilter', 'pheatmap', 'ggbeeswarm', 'apeglm', 'qvalue',\n",
+      "  'pcaExplorer', 'AnnotationDbi', 'DOSE', 'enrichplot', 'pathview',\n",
+      "  'clusterProfiler'\n",
+      "\n",
+      "also installing the dependencies ‘formatR’, ‘GenomeInfoDbData’, ‘zlibbioc’, ‘lambda.r’, ‘futile.options’, ‘numDeriv’, ‘bdsmatrix’, ‘mvtnorm’, ‘TSP’, ‘qap’, ‘gclus’, ‘codetools’, ‘iterators’, ‘GSEABase’, ‘sass’, ‘tweenr’, ‘polyclip’, ‘bitops’, ‘GenomeInfoDb’, ‘XVector’, ‘MatrixGenerics’, ‘DelayedArray’, ‘futile.logger’, ‘snow’, ‘BH’, ‘xtable’, ‘coda’, ‘bbmle’, ‘viridis’, ‘dendextend’, ‘seriation’, ‘webshot’, ‘egg’, ‘pkgmaker’, ‘registry’, ‘rngtools’, ‘cluster’, ‘gridBase’, ‘foreach’, ‘doParallel’, ‘SparseM’, ‘matrixStats’, ‘Category’, ‘RBGL’, ‘AnnotationForge’, ‘httpuv’, ‘sourcetools’, ‘bslib’, ‘BiocFileCache’, ‘plogr’, ‘gridExtra’, ‘fastmatch’, ‘ggforce’, ‘tidygraph’, ‘graphlayouts’, ‘ggfun’, ‘RCurl’, ‘Biostrings’, ‘yulab.utils’, ‘S4Vectors’, ‘IRanges’, ‘GenomicRanges’, ‘SummarizedExperiment’, ‘BiocGenerics’, ‘Biobase’, ‘BiocParallel’, ‘locfit’, ‘geneplotter’, ‘RcppArmadillo’, ‘annotate’, ‘survival’, ‘beeswarm’, ‘vipor’, ‘emdbook’, ‘RcppEigen’, ‘RcppNumerical’, ‘heatmaply’, ‘plotly’, ‘NMF’, ‘topGO’, ‘limma’, ‘GOstats’, ‘GO.db’, ‘shiny’, ‘shinydashboard’, ‘shinyBS’, ‘shinyAce’, ‘threejs’, ‘biomaRt’, ‘RSQLite’, ‘DO.db’, ‘fgsea’, ‘GOSemSim’, ‘cowplot’, ‘ggraph’, ‘igraph’, ‘scatterpie’, ‘shadowtext’, ‘KEGGgraph’, ‘XML’, ‘Rgraphviz’, ‘graph’, ‘png’, ‘org.Hs.eg.db’, ‘KEGGREST’, ‘downloader’, ‘rvcheck’\n",
+      "\n",
+      "\n",
+      "Warning message in .inet_warning(msg):\n",
+      "“installation of package ‘mvtnorm’ had non-zero exit status”\n"
+     ]
+    }
+   ],
    "source": [
-    "BiocManager::install(\"RColorBrewer\", \"ggrepel\", \"scales\", \"genefilter\", \"pheatmap\", \"ggbeeswarm\", \"apeglm\", \"qvalue\", \"pcaExplorer\", \"AnnotationDbi\", \"DOSE\", \"enrichplot\", \"pathview\", \"clusterProflier\")"
+    "if (!requireNamespace(\"BiocManager\", quietly = TRUE))\n",
+    "    install.packages(\"BiocManager\")\n",
+    "\n",
+    "BiocManager::install(c(\"DESeq2\", \"RColorBrewer\", \"ggrepel\", \"scales\", \"genefilter\", \"pheatmap\", \"ggbeeswarm\", \"apeglm\", \"qvalue\", \"pcaExplorer\", \"AnnotationDbi\", \"DOSE\", \"enrichplot\", \"pathview\", \"clusterProfiler\"), force = TRUE)"
    ]
   },
   {
@@ -135,10 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ca2c4943-c4af-47ff-b33d-3036ca80c0e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in DESeqDataSetFromMatrix(countData = TranscriptData, colData = ColData): could not find function \"DESeqDataSetFromMatrix\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in DESeqDataSetFromMatrix(countData = TranscriptData, colData = ColData): could not find function \"DESeqDataSetFromMatrix\"\nTraceback:\n"
+     ]
+    }
+   ],
    "source": [
     "dds <- DESeqDataSetFromMatrix(countData = TranscriptData, colData = ColData)\n",
     "\n",
