--- a/RNAseq_Analysis.ipynb
+++ b/RNAseq_Analysis.ipynb
@@ -13,12 +13,34 @@
    "execution_count": null,
    "id": "10e43052-5fa1-4179-a83f-30c24495c251",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'getOption(\"repos\")' replaces Bioconductor standard repositories, see\n",
+      "'?repositories' for details\n",
+      "\n",
+      "replacement repositories:\n",
+      "    CRAN: https://cran.r-project.org\n",
+      "\n",
+      "\n",
+      "Bioconductor version 3.12 (BiocManager 1.30.16), R 4.0.1 (2020-06-06)\n",
+      "\n",
+      "Installing package(s) 'BiocVersion', 'DESeq2', 'qvalue', 'AnnotationDbi',\n",
+      "  'DOSE'\n",
+      "\n",
+      "also installing the dependencies ‘RCurl’, ‘matrixStats’, ‘lambda.r’, ‘XML’, ‘xtable’, ‘GenomeInfoDb’, ‘XVector’, ‘MatrixGenerics’, ‘DelayedArray’, ‘futile.logger’, ‘BH’, ‘annotate’, ‘survival’, ‘plogr’, ‘gridExtra’, ‘fastmatch’, ‘GO.db’, ‘S4Vectors’, ‘IRanges’, ‘GenomicRanges’, ‘SummarizedExperiment’, ‘BiocGenerics’, ‘Biobase’, ‘BiocParallel’, ‘genefilter’, ‘locfit’, ‘geneplotter’, ‘RcppArmadillo’, ‘RSQLite’, ‘DO.db’, ‘fgsea’, ‘GOSemSim’\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if (!requireNamespace(\"BiocManager\", quietly = TRUE))\n",
     "    install.packages(\"BiocManager\")\n",
     "\n",
-    "BiocManager::install(c(\"DESeq2\", \"RColorBrewer\", \"ggrepel\", \"scales\", \"genefilter\", \"pheatmap\", \"ggbeeswarm\", \"apeglm\", \"qvalue\", \"pcaExplorer\", \"AnnotationDbi\", \"DOSE\", \"enrichplot\", \"pathview\", \"clusterProfiler\"), force = TRUE)"
+    "BiocManager::install(c(\"DESeq2\", \"qvalue\", \"AnnotationDbi\", \"DOSE\"), force = TRUE)"
    ]
   },
   {
@@ -30,20 +52,9 @@
    "source": [
     "library(DESeq2)\n",
     "library(tidyverse)\n",
-    "library(RColorBrewer)\n",
-    "library(ggrepel)     \n",
-    "library(scales)  \n",
-    "library(genefilter)\n",
-    "library(pheatmap)\n",
-    "library(ggbeeswarm)\n",
-    "library(apeglm)\n",
     "library(qvalue)\n",
-    "library(pcaExplorer)\n",
     "library(AnnotationDbi)\n",
-    "library(DOSE)\n",
-    "library(enrichplot)\n",
-    "library(\"pathview\")\n",
-    "library(clusterProfiler)\n"
+    "library(DOSE)\n"
    ]
   },
   {
